--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 </div>
 <span id="prompt">Touch the rose</span>
 
-<div style="display: none;">
-  <audio autoplay="" loop="" controls="">
+<audio id="bg-music" autoplay loop>
     <source src="song.mp3" type="audio/mp3">
-  </audio>
-</div>
+    Your browser does not support the audio element.
+</audio>
+
 
 <h1>By Your one and only Mad head 😌✨</h1>
 <p><a href="https://wa.me/918767506459?text=awesome one ✨" target="_blank">For feedback</a></p>
